TestData/add.json
{
  "namespace": "liuhongzhi",
  "desService": "example-service",
  "name": "route-ctl-test",
  "srcPods": [
    {
      "namespace": "liuhongzhi",
      "name": "example-caller-service-pod-1"
    }
  ],
  "desPods": [
    {
      "namespace": "liuhongzhi",
      "name": "example-service-pod-1"
    }
  ],
  "endpointControls": [
    {
      "uri": "/",
      "useRegex": false
    }
  ],
  "extraInfo": {
    "portNumber": 90,
    "hosts": [
      "*"
    ]
  }
}
