TestData/auto.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  creationTimestamp: "2024-05-06T12:45:42Z"
  generation: 1
  name: routectl-mpp
  namespace: routectl-test
  resourceVersion: "233108565"
  uid: e19ae9c8-bd98-4cb8-9080-6ad662bd717c
spec:
  host: mpp
  subsets:
  - labels:
      routectl-name: mpp-1-8588786769-jwnhp
      routectl-ns: routectl-test
    name: mpp-1-8588786769-jwnhp
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  creationTimestamp: "2024-05-06T12:45:42Z"
  generation: 1
  name: routectl-mpp
  namespace: routectl-test
spec:
  hosts:
  - mpp
  http:
  - match:
    - sourceLabels:
        routectl-name: mpp-2-8588786769-9bcz2
        routectl-ns: routectl-test
    - sourceLabels:
        routectl-name: mpp-2-8588786769-bwbrg
        routectl-ns: routectl-test
    - sourceLabels:
        routectl-name: mpp-2-8588786769-hd4l9
        routectl-ns: routectl-test
    - sourceLabels:
        routectl-name: mpp-1-8588786769-jwnhp
        routectl-ns: routectl-test
    name: mpp-test
    route:
    - destination:
        host: mpp-1-8588786769-jwnhp
        port:
          number: 80
        subset: mpp-1-8588786769-jwnhp
