TestData/update.json
{
  "id": "string",
  "repo": "string",
  "version": {
    "major": "string",
    "minor": "string",
    "patch": "string"
  },
  "interfaces": [
    {
      "id": "string::11",
      "path": "string2",
      "inputSize": 0,
      "outputSize": "string"
    },
    {
      "id": "string::22",
      "path": "strig2",
      "inputSize": 0,
      "outputSize": "string"
    }
  ],
  "idleResource": {
    "cpu": 0,
    "ram": 0,
    "disk": 0,
    "gpuCore": 0,
    "gpuMem": 0
  },
  "desiredResource": {
    "cpu": 0,
    "ram": 0,
    "disk": 0,
    "gpuCore": 0,
    "gpuMem": 0
  },
  "desiredCapability": 0
}
